[17052024 - update fe] update giao diện body & logic footer

--- a/src/app/main/config-sms-email/config-sms-email.component.html
+++ b/src/app/main/config-sms-email/config-sms-email.component.html
@@ -20,7 +20,7 @@
               <!-- <ng-container > -->
               <ng-container [formGroupName]="i">
                 <tr>
-                  <td class="col-md-3">{{rowData.value.nameConfig}}</td>
+                  <td class="col-md-3" style="font-weight: 700;color: #001A4D;">{{rowData.value.nameConfig}}</td>
                   <td class="col-md-3"><input name="item" type="checkbox" formControlName="smsConfig" /></td>
                   <td class="col-md-3"><input name="item" type="checkbox" formControlName="emailConfig" /></td>
                   <td class="col-md-2">
