--- a/src/app/main/contract-type/contract-type.component.scss
+++ b/src/app/main/contract-type/contract-type.component.scss
@@ -1,13 +1,34 @@
 .btn_submit{
-  border: 0px;
-  border-radius: 5px;
-  height: 33px;
+  border: 1px solid rgba(0, 26, 77, 0.10);
+  border-radius: 8px;
+  height: 35px;
   box-sizing: border-box;
   color: white;
-  background-color: #106DB6;
+  background: var(--Primary, #0041C4);
   font-size: 13px;
   margin: 0 10px;
+  font-style: normal;
+  font-weight: 700;
 }
+
+.btn_search1{
+  border-radius: 8px;
+  border: 1px solid rgba(0, 26, 77, 0.10);
+  height: 35px;
+  box-sizing: border-box;
+  color: #001A4D;
+  background-color: #FFF;
+  font-size: 13px;
+  margin: 0 10px;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.container-fluid{
+  background-color: #FFFFFF;
+  border-radius: 12px;
+}
+
 .input_text {
   padding-left: 10px;
   outline: none;
@@ -24,7 +45,7 @@
   border-collapse: collapse;
   width: 100%;
   font-size: 13px;
-  font-family: font_lexend_deca;
+  // font-family: font_lexend_deca;
 }
 #table td, #table th {
   //border: 1px solid #ddd;
@@ -37,8 +58,9 @@
 
 #table th {
   //text-align: center;
-  background-color: #E2ECF6;
-  color: #106DB6;
+  background-color: #EBF2FB;
+  color: #8E9AB0;
+  font-weight: 500;
 }
 
 #table tr:last-child th:first-child {
@@ -58,6 +80,10 @@
   .pi-fw {
     color:  #106DB6;
     margin-right: 5px;
+  }
+  
+  .p-paginator{
+    background-color: #F3F6FA !important;
   }
 
   .p-paginator .p-paginator-pages .p-paginator-page{
@@ -89,7 +115,7 @@
 
   .p-datatable-table, .ng-star-inserted{
     font-size: 13px;
-    font-family: font_lexend_deca;
+    // font-family: font_lexend_deca;
   }
   .p-datatable .p-paginator-bottom {
     border-width: 0;
