--- a/src/app/main/customer/customer.component.scss
+++ b/src/app/main/customer/customer.component.scss
@@ -2,6 +2,13 @@
     color: #027e21;
   }
   
+  .container-fluid{
+    background-color: #FFFFFF;
+    border-radius: 12px;
+    padding-top: 15px;
+    min-height: 84vh;
+  }
+  
   .list_header{
     color:#898989;
     text-align: center;
@@ -174,6 +181,10 @@
       color: white;
       border: 1px solid #2199e8;
     }
+    
+    .p-paginator{
+      background-color: #F3F6FA !important;
+    }
   
     .p-paginator-bottom .p-ripple{
       padding: 10px;
@@ -268,7 +279,7 @@
     width: 100%;
     box-sizing: border-box;
     color: white;
-    background-color: #106DB6;
+    background-color: #0041C4;
     font-size: 13px;
   }
 
@@ -289,8 +300,8 @@
   
   #table th {
     //text-align: center;
-    background-color: #E2ECF6;
-    color: #106DB6;
+    background-color: #EBF2FB;
+    color: #8E9AB0;
   }
   
   #table tr:last-child th:first-child {
