--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -170,8 +170,8 @@
       </div>
     </div>
 
-    <div class="content_footer">
+    <!-- <div class="content_footer">
         <div>@Copyright 2023 - MobiFone | v1.17.0</div>
-    </div>
+    </div> -->
   </main>
 </div>
