--- a/src/app/main/role/role.component.scss
+++ b/src/app/main/role/role.component.scss
@@ -11,6 +11,7 @@
 
 .container-fluid{
   background-color: #FFFFFF;
+  border-radius: 12px;
 }
 
 .input_text {
@@ -83,6 +84,10 @@ border-bottom-right-radius: 10px;
   background-color: #2199e8;
   color: white;
   border: 1px solid #2199e8;
+}
+
+.p-paginator{
+  background-color: #F3F6FA !important;
 }
 
 .p-paginator-bottom .p-ripple{
