--- a/src/app/main/contract-signature/contract-signature.component.scss
+++ b/src/app/main/contract-signature/contract-signature.component.scss
@@ -11,6 +11,7 @@
 .container-fluid-bg{
   background-color: #FFFFFF;
   width: 100%;
+  border-radius: 12px;
 }
 .item_contract:hover{
   background-color: rgb(255, 254, 254);
