--- a/src/app/main/contract-template/contract-template.component.html
+++ b/src/app/main/contract-template/contract-template.component.html
@@ -30,8 +30,8 @@
       </div>
     </div>
     <div class="col-md-6 btn_search">
-      <button *ngIf="isQLMHD_06" class="btn btn-lg btn-block btn_submit" (click)="searchContract()">{{'btn.search' | translate }}</button>
-      <button *ngIf="isQLMHD_01" class="btn btn-lg btn-block btn_submit" (click)="add()">{{'btn.add' | translate }}</button>
+      <button *ngIf="isQLMHD_06" class="btn cod-md-1 btn-lg btn-block btn_search1" (click)="searchContract()">{{'btn.search' | translate }}</button>
+      <button *ngIf="isQLMHD_01" class="btn cod-md-1 btn-lg btn-block btn_add" (click)="add()">{{'btn.add' | translate }}</button>
     </div>
   </div>
 
@@ -42,7 +42,7 @@
     <div class="col-md-3">{{'action' | translate}}</div>
   </div>
 
-  <div style="min-height: 68vh;">
+  <div style="min-height: 67vh;">
   <div class="item_contract" *ngFor="let item of contractsTemplate  | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
     
     <div class="row">
