--- a/src/app/main/digital-certificate/digital-certificate.component.scss
+++ b/src/app/main/digital-certificate/digital-certificate.component.scss
@@ -1,12 +1,33 @@
 .btn_submit{
-  border: 0px;
-  border-radius: 5px;
-  height: 33px;
+  border: 1px solid rgba(0, 26, 77, 0.10);
+  border-radius: 8px;
+  height: 35px;
   box-sizing: border-box;
   color: white;
-  background-color: #106DB6;
+  background: var(--Primary, #0041C4);
   font-size: 13px;
   margin: 0 10px;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.btn_search1{
+  border-radius: 8px;
+  border: 1px solid rgba(0, 26, 77, 0.10);
+  height: 35px;
+  box-sizing: border-box;
+  color: #001A4D;
+  background-color: #FFF;
+  font-size: 13px;
+  margin: 0 10px;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.container-fluid{
+  background-color: #FFFFFF;
+  border-radius: 12px;
+  padding-top: 15px;
 }
 
 input[type="file"] {
@@ -53,8 +74,9 @@ padding: 8px;
 
 #table th {
 //text-align: center;
-background-color: #E2ECF6;
-color: #106DB6;
+  background-color: #EBF2FB;
+  color: #8E9AB0;
+  font-weight: 500;
 }
 
 #table tr:last-child th:first-child {
@@ -75,6 +97,10 @@ color: #106DB6;
     color:  #106DB6;
     margin-right: 5px;
     font-size: 10px;
+  }
+  
+  .p-paginator{
+    background-color: #F3F6FA !important;
   }
 
   .p-paginator .p-paginator-pages .p-paginator-page{
