--- a/src/app/main/role/role.component.html
+++ b/src/app/main/role/role.component.html
@@ -19,7 +19,7 @@
   </div>
   <div style="min-height: 77vh;">
   <div class="row" style="padding-top: 20px;">
-    <p-table [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
+    <p-table [value]="list" [paginator]="false" [rows]="15" id="table" [autoLayout]="true" [(first)]="first">
       <ng-template pTemplate="header" let-columns>
         <tr>
             <th *ngFor="let col of cols" [style]='col.style'>
@@ -37,9 +37,9 @@
               </td>
           </tr>
       </ng-template>
-      <ng-template pTemplate="paginatorleft" let-state>
+      <!-- <ng-template pTemplate="paginatorleft" let-state>
         <span style="color: white !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
-      </ng-template>
+      </ng-template> -->
       <ng-template pTemplate="paginatorright" let-state>
         <span style="color: #0160AE !important;">{{'chart.number' | translate}}: {{state.totalRecords > 0 ? state.first+1 : state.first}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
       </ng-template> 
@@ -54,6 +54,13 @@
     </div>
   </div>
 </div>
+
+<div style="display: grid;margin-top: 10px;grid-template-columns: repeat(3, 1fr)">
+  <div></div>
+  <p-paginator (onPageChange)="onPageChange($event)" [rows]="row" [totalRecords]="totalRecords"></p-paginator>
+  <div style="color: #0160AE !important;margin: auto 0 auto auto;">{{'chart.number' | translate}}: {{totalRecords === 0 ? 0 : page * row + 1}} - {{totalRecords > 0 ? toRecord() : 0}} / {{totalRecords > 0 ? totalRecords : 0}}</div>
+</div>
+
 <div *ngIf="!isQLVT_01 && !isQLVT_02 && !isQLVT_03 && !isQLVT_04 && !isQLVT_05">
   {{'no.role' | translate}}
 </div>
